mdapi/objects/Troubleshooting__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Troubleshooting Articles</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <description>Describe the cause of the issue, include screenshot if needed, but also include text contained in screenshot.</description>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Intended_Audience__c</fullName>
        <label>Intended Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Internal Notes for the team</description>
        <inlineHelpText>Post important notes that will be displayed to the internal team only.</inlineHelpText>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legacy_KB_Date_Created__c</fullName>
        <description>Date the old site KB was posted</description>
        <label>Legacy KB Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_KB_Number__c</fullName>
        <inlineHelpText>Format:  KB ###</inlineHelpText>
        <label>Legacy KB Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Keywords__c</fullName>
        <description>NOT REQUIRED FOR NEW ARTICLES:  Copy and paste the keyword field content from the Legacy site article.</description>
        <inlineHelpText>NOT REQUIRED FOR NEW ARTICLES:  Copy and paste the keyword field content from the Legacy site article.</inlineHelpText>
        <label>Legacy Keywords</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_URL__c</fullName>
        <description>Not required for new content.  Paste the Full HTTPS URL from the legacy website.</description>
        <inlineHelpText>Not required for new content.  Paste the Full HTTPS URL from the legacy website.</inlineHelpText>
        <label>Legacy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <description>Troubleshooting Problem Description</description>
        <label>Problem</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Versions__c</fullName>
        <description>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</description>
        <inlineHelpText>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</inlineHelpText>
        <label>Product Versions Affected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Resolution steps and recommendations for the issue</description>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Troubleshooting</label>
    <pluralLabel>Troubleshooting</pluralLabel>
    <validationRules>
        <fullName>Legacy_KB_Article_Format</fullName>
        <active>true</active>
        <description>Format: KB ###</description>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK(Legacy_KB_Number__c), 
REGEX( Legacy_KB_Number__c , 
&quot;KB [0-9]{1,3}&quot;) 
) 
)</errorConditionFormula>
        <errorMessage>The Legacy KB Article field is reserved for KB ### article number references. Required format example: KB 263</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Troubleshooting_Title_Length_Rule</fullName>
        <active>true</active>
        <description>Require that the title is less than 66 characters</description>
        <errorConditionFormula>LEN( Title ) &gt; 65</errorConditionFormula>
        <errorMessage>Title Length too long - To optimize Search Engine results, the article title must be less than 66 characters.</errorMessage>
    </validationRules>
</CustomObject>